Fixed :active pseudo class not being unapplied on mouse button release.

BUG: 68438

svn path=/trunk/kdelibs/; revision=390699